--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
       </div>
     </div>
-    <div class="focus-arrow-svg">
+    <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
         <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
       </svg>
