--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -608,15 +608,19 @@
                     backgroundColor: '#0c2340',
                     titleColor: '#F15A22',
                     padding: 12,
+                    displayColors: false, // 하얀 박스 제거
                     callbacks: {
+                        label: function(context) {
+                            return `● Scoring Avg: ${context.parsed.y}`; // 오렌지색 닷(폰트 색상 적용 예정)은 유니코드로 대체
+                        },
                         afterLabel: function(context) {
                             const i = context.dataIndex;
                             return [
-                                `Rounds: ${['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)', '70-75-71 (E)'][i]}`,
-                                `Rank: ${['T9', 'T12', 'T24', 'T55', 'T38', 'T3'][i]}`,
+                                `● Rounds: ${['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)', '70-75-71 (E)'][i]}`,
+                                `● Rank: ${['T9', 'T12', 'T24', 'T55', 'T38', 'T3'][i]}`,
                                 `-----------------------`,
-                                `WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'][i]}`,
-                                `Earned: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'][i]}`,
+                                `● WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'][i]}`,
+                                `● Earned: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'][i]}`,
                                 i === 5 ? `Rank ▲ 136` : null
                             ].filter(v => v !== null);
                         }
