--- a/test-2.html
+++ b/test-2.html
@@ -1,3 +1,250 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png" sizes="32x32">
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
+
+<title>Joshua Hong | Korean-Mexican NCAA D1 Golfer | UTSA Official Site</title>
+<meta name="description" content="Official site of Joshua Hong, a Korean-Mexican NCAA Division I golfer at UTSA. Explore career records, tournament highlights, and latest media coverage.">
+<meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
+<link rel="canonical" href="https://www.joshuahonggolf.com/index.html">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+// Google Analytics 4 Configuration
+gtag('config', 'G-H1JW8YBDZ8', {
+'page_title': 'Joshua Hong Official Site',
+'send_page_view': true,
+'cookie_flags': 'SameSite=None;Secure'
+});
+
+// Bookmark & Return Visitor Tracking Logic
+if (window.performance && window.performance.navigation.type === 0) {
+// Type 0: Direct access (Potential Bookmark or URL entry)
+gtag('event', 'visitor_entry', {
+'method': 'direct_or_bookmark',
+'event_category': 'Engagement',
+'event_label': 'Direct Access Tracking'
+});
+}
+</script>
+
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-H1JW8YBDZ8');
+</script>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+
+<style>
+    /* 1. 기본 설정 - 이중 스크롤 방지를 위해 overflow 수정 */
+    html {
+      margin: 0; padding: 0; width: 100%;
+      overflow-x: hidden;
+    }
+    body {
+      margin: 0; padding: 0; width: 100%;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 300;
+      -webkit-text-size-adjust: 100%;
+    }
+    * { box-sizing: border-box; }
+
+    /* [상단 헤더 기본 스타일] */
+    .sticky-top {
+      position: absolute; top: 0; left: 0; z-index: 1000; width: 100%;
+      background: #ffffff; box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.4s;
+    }
+
+    /* 스크롤 시 '폼 나게' 내려와 고정되는 상태 */
+    .sticky-top.scrolled {
+      position: fixed;
+      top: 0;
+      transform: translateY(0);
+      opacity: 1;
+      visibility: visible;
+      background: rgba(255, 255, 255, 0.98);
+    }
+
+    /* 위로 올라갈 때 우아하게 사라지는 준비 상태 */
+    .sticky-top.preparing {
+      position: fixed;
+      top: 0;
+      transform: translateY(-100%);
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    .top-bar {
+      background-color: #F15A22; color: white; text-align: center;
+      padding: 10px 0; font-size: 11px;
+      font-family: 'Oswald', sans-serif; letter-spacing: 1.5px;
+      font-weight: 400;
+    }
+
+    /* 헤더 래퍼: 데스크탑/모바일 공용 */
+    .header-wrapper {
+      display: flex; align-items: center; justify-content: space-between;
+      padding: 0 40px; height: 80px;
+    }
+
+    /* 로고 영역 */
+    .logo-area { display: flex; align-items: center; text-decoration: none; color: #333; }
+    .logo-img { height: 50px; width: auto; display: block; }
+    .logo-text { font-family: 'Oswald', sans-serif; font-weight: 500; font-size: 20px; text-transform: uppercase; letter-spacing: 1px; margin-left: 12px; }
+
+    /* 데스크탑 메뉴 */
+    .nav-links { display: flex; gap: 30px; align-items: center; }
+    .nav-links a {
+      text-decoration: none; color: #444; font-family: 'Oswald', sans-serif;
+      font-size: 14px; text-transform: uppercase; letter-spacing: 1px;
+      transition: 0.3s; padding: 8px 15px; border-radius: 4px;
+    }
+    /* NCAA Stats 활성화 (주황색 버튼) */
+    .nav-links a.active { background-color: #F15A22 !important; color: #fff !important; border: none; } 
+    .mobile-menu-logo, .close-menu, .menu-footer { display: none; }
+
+    /* 메뉴 토글 버튼 */
+    .menu-toggle {
+      display: none; font-size: 30px; cursor: pointer;
+      background: none; border: none; color: #F15A22;
+    }
+
+    /* TOP 버튼 스타일 */
+    #fixedTopBtn {
+      position: fixed !important; bottom: 25px !important; right: 20px !important;
+      width: 50px !important; height: 50px !important;
+      background-color: #F15A22 !important; color: #fff !important;
+      border: none !important; border-radius: 50% !important;
+      font-weight: 900 !important; font-size: 12px !important;
+      z-index: 9999 !important; cursor: pointer !important;
+      display: none; box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    /* [모바일 반응형] */
+    @media (max-width: 1024px) {
+      .header-wrapper { padding: 0 20px; height: 70px; justify-content: flex-start; gap: 20px; }
+      .menu-toggle { display: block; order: 1; }
+      .logo-area { order: 2; }
+      .logo-text { display: none; }
+      .logo-img { height: 40px; }
+
+      .nav-links {
+        position: fixed; top: 0; left: -100%; 
+        width: 260px; height: 100vh;
+        background: #ffffff !important; flex-direction: column;
+        padding: 50px 25px; transition: 0.3s; z-index: 2000;
+        box-shadow: 10px 0 20px rgba(0,0,0,0.1);
+        align-items: flex-start; gap: 10px;
+      }
+      .nav-links.active { left: 0; }
+      
+      .nav-links a { width: 100%; padding: 12px 20px; border-bottom: none; }
+      .nav-links a.active { background-color: #F15A22 !important; color: #fff !important; }
+
+      .mobile-menu-logo { display: block; margin-bottom: 30px; } 
+      .mobile-menu-logo img { height: 35px; }
+      .close-menu { display: block; position: absolute; top: 20px; right: 20px; font-size: 24px; color: #ccc; }
+      
+      .menu-footer {
+        display: block; margin-top: 60px; 
+        padding-top: 20px; border-top: 1px solid #eee; width: 100%;
+      }
+      .footer-name { display: block; font-family: 'Oswald', sans-serif; font-size: 16px; font-weight: 500; color: #333; }
+      .footer-team { display: block; font-family: 'Oswald', sans-serif; font-size: 11px; color: #F15A22; margin-top: 4px; }
+    }
+
+    @media (orientation: landscape) and (max-height: 500px) {
+      .header-wrapper { height: 55px; }
+      .logo-img { height: 35px !important; }
+      .nav-links { padding: 30px 25px; overflow-y: auto; }
+      .menu-footer { margin-top: 30px; }
+    }
+  </style>
+</head>
+
+<body>
+<div class="sticky-top" id="mainHeader">
+<div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
+<header class="header-wrapper">
+<button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+<a href="index.html" class="logo-area">
+<img src="images/joshua-hong-logo-nombre.jpg" alt="Joshua Hong Golf" class="logo-img"> 
+<span class="logo-text">Joshua Hong Golf</span>
+</a>
+
+<nav class="nav-links" id="navLinks">
+<span class="close-menu" onclick="toggleMenu()">✕</span>
+<div class="mobile-menu-logo">
+<img src="images/joshua-hong-logo-nombre.jpg" alt="Joshua Hong">
+</div>
+
+<a href="index.html" class="active">Home</a>
+<a href="ncaa-stats.html">NCAA Stats</a>
+<a href="news-media.html">News & Media</a>
+<a href="reference-links.html">Reference & Links</a>
+<a href="junior-career.html">Junior Career</a>
+
+<div class="menu-footer">
+<span class="footer-name">JOSHUA HONG</span>
+<span class="footer-team">UTSA MEN'S GOLF</span>
+</div>
+</nav>
+</header>
+</div>
+
+<button id="fixedTopBtn" onclick="scrollToTop()">TOP</button>
+
+ <script>
+    function toggleMenu() {
+      document.getElementById('navLinks').classList.toggle('active');
+    }
+
+    window.addEventListener('scroll', function() {
+      const btn = document.getElementById('fixedTopBtn');
+      const header = document.getElementById('mainHeader');
+      const currentScrollY = window.pageYOffset;
+
+      // 1. TOP 버튼 제어
+      if (currentScrollY > 100) {
+        btn.style.display = 'block';
+      } else {
+        btn.style.display = 'none';
+      }
+
+      // 2. 헤더 우아한 제어 (300px 기준)
+      if (currentScrollY > 300) {
+        header.classList.add('scrolled');
+        header.classList.remove('preparing');
+      } else if (currentScrollY > 10) { 
+        header.classList.remove('scrolled');
+        header.classList.add('preparing');
+      } else {
+        header.classList.remove('scrolled', 'preparing');
+      }
+    });
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
+
+
+
 <div class="index-activity-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <style>
