--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -485,21 +485,22 @@
     <div style="background: #ffffff; padding: 25px; border-left: 6px solid #0c2340; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #f1f1f1; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800;">The Challenges of Solitude</h4>
       <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Joshua’s first Fall season was a testament to his mental fortitude. Moving to the U.S. as a D1 athlete, he had to navigate <b>independent living (cooking, laundry, time management)</b> and rigorous academics entirely on his own. Most challenging of all, <b>Joshua competed through the first four major events without a technical coach present in the U.S.</b>—a period of immense pressure where he had to self-correct and maintain his swing through sheer willpower.
-      </p>
+  Joshua’s first Fall season included relocation to the United States and the transition to independent living, including personal logistics and academic responsibilities. During the early portion of the season, he competed in the first four major events without an on-site technical coach in the U.S. Technical adjustments and swing maintenance during this period were managed independently while continuing full academic and competitive participation.
+</p>
     </div>
 
     <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #2b6cb0; font-size: 16px; font-weight: 800;">Trusted Mentorship & Team Support</h4>
-      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        During this demanding phase, Joshua maintained a close bond with his first mentor, <b>Sophia Sheridan (LPGA)</b>. Despite battling a severe flu during the Badger Invitational and the lack of immediate on-site technical support, Joshua persevered. <b>Through the incredible support of the UTSA Coaching Staff and his teammates, he not only survived this transition but fully adapted to the NCAA environment.</b>
-      </p>
+     <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+  During this period, Joshua maintained ongoing communication with his first mentor, Sophia Sheridan. At the Badger Invitational, competition was completed while managing illness and without immediate on-site technical support. Throughout the transition, support from the UTSA coaching staff and teammates remained in place. Competitive participation and academic responsibilities continued as scheduled within the NCAA program environment.
+</p>
     </div>
 
     <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #c98a2e; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #c98a2e; font-size: 16px; font-weight: 800;">A Powerful New Alliance</h4>
       <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        After proving his resilience by finishing as the team’s top contributor, a new chapter began. Joshua has now secured elite-level guidance by partnering with renowned coach <b>Bryan Gathright (Coach to Jhonny Keeper)</b>. This world-class infrastructure, combined with the solid foundation at UTSA, has already yielded results, as seen in his <b>T38th finish at the Patriot All-American.</b> Joshua is now fully prepared for a Spring season of continued progress.</p>
+  Following the Fall season, Joshua began working with Bryan Gathright for technical coaching support. This collaboration was added alongside continued training and competition within the UTSA men’s golf program. Subsequent competitive results included a T38 finish at the Patriot All-America Invitational. Preparation for Spring competition continues within the existing collegiate training and academic structure.
+</p>
     </div>
 
   </div>
@@ -549,19 +550,19 @@
       <div style="display: grid; gap: 16px;">
         <div style="display: flex; align-items: flex-start; gap: 12px;">
           <div style="color: #c98a2e; margin-top: 2px;">✔</div>
-          <span><b>Roster Role & Reliability:</b> Consistently ranked among the program’s top performers, providing stable scoring presence within the UTSA roster (<b>SCRBD #515</b>).</span>
+          <span><b>Roster Role & Reliability:</b> Scoring records place Joshua within the upper range of program scoring output during the evaluation period (<b>SCRBD #515</b>).</span>
         </div>
         <div style="display: flex; align-items: flex-start; gap: 12px;">
           <div style="color: #c98a2e; margin-top: 2px;">✔</div>
-          <span><b>Scoring Output During Transition:</b> Recorded <b>7 under-par rounds out of 12</b> while navigating the freshman transition phase.</span>
+          <span><b>Scoring Output During Transition:</b> During the freshman transition phase, 7 of 12 competitive rounds were recorded under par.</span>
         </div>
         <div style="display: flex; align-items: flex-start; gap: 12px;">
           <div style="color: #c98a2e; margin-top: 2px;">✔</div>
-          <span><b>Counting Score Consistency:</b> Achieved a <b>100% counting score rate</b>, with all competitive rounds contributing directly to team totals.</span>
+          <span><b>Counting Score Consistency:</b> Counting Score Rate: 100%. All competitive rounds were logged as counting scores toward team totals.</span>
         </div>
         <div style="display: flex; align-items: flex-start; gap: 12px;">
           <div style="color: #c98a2e; margin-top: 2px;">✔</div>
-          <span><b>Qualifier Performance:</b> Maintained a <b>69.75 scoring average</b> at TPC Canyons, securing a spot in the travel squad with competitive depth.</span>
+          <span><b>Qualifier Performance:</b> At TPC Canyons, a 69.75 scoring average was recorded during qualifying rounds, resulting in inclusion within the travel squad lineup.</span>
         </div>
       </div>
     </div>
@@ -604,22 +605,22 @@
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800;">Performance Under Adversity</h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          At the Trinity Forest Invitational, Joshua competed under challenging conditions including illness and limited on-site technical support. Despite these constraints, he completed all rounds to ensure full team representation and scoring continuity <b>(T55/87)</b>.
-        </p>
+  At the Trinity Forest Invitational, Joshua competed while managing illness and without immediate on-site technical support. All rounds were completed, and results were recorded as T55 out of 87 competitors.
+</p>
       </div>
 
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #546e7a; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #455a64; font-size: 16px; font-weight: 800;">Reliable Team Contribution</h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          Even during periods of physical limitation, Joshua’s scoring remained consistent, with <b>100% of his rounds counting toward UTSA’s team totals</b>. This reliability reinforces his role as a foundational scoring contributor.
-        </p>
+  Across this period, Joshua’s competitive rounds were logged as counting scores toward UTSA’s team totals. Counting Score Rate during the period: 100%
+</p>
       </div>
 
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #c98a2e; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #c98a2e; font-size: 16px; font-weight: 800;">Strategic Development Focus</h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          Entering <b>Spring 2026</b>, Joshua’s plan emphasizes converting a strengthened technical foundation into stable, team-aligned scoring output, enhancing readiness for UTSA’s seasonal objectives.
-        </p>
+  Entering Spring 2026, technical and scoring data from prior competition was carried forward for continued tracking. Round-level outputs are monitored for alignment with team scoring requirements within the UTSA program.
+</p>
       </div>
     </div>
 
