--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -603,7 +603,7 @@
       <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Key Performance Insights:</b>
 
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
-        <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800;">Performance Under Adversity</h4>
+        <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800;">Performance Under Constraints</h4>
         <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
   At the Trinity Forest Invitational, Joshua competed while managing illness and without immediate on-site technical support. All rounds were completed, and results were recorded as T55 out of 87 competitors.
 </p>
