--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </tr>
         <tr style="border-bottom: 1px solid #e2e8f0;">
           <td style="padding: 12px 0; color: #718096; font-weight: 600;">Height</td>
-          <td style="padding: 12px 0; text-align: right; color: #2d3748;">1.78 m</td>
+          <td style="padding: 12px 0; text-align: right; color: #2d3748;">5′10″ (1.78 m)</td>
         </tr>
         <tr>
           <td style="padding: 12px 0; color: #718096; font-weight: 600;">Prior Sports</td>
