--- a/test-2.html
+++ b/test-2.html
@@ -964,6 +964,106 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 
+
+<div style="width: 100%; max-width: 800px; margin: 20px auto; font-family: 'Inter', -apple-system, sans-serif; box-sizing: border-box;">
+  
+  <div onclick="toggleSummerSchedule()" style="cursor: pointer; background: #000000; border-radius: 8px; padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+    <div style="display: flex; align-items: center;">
+      <span style="color: #ffffff; font-weight: 800; font-size: 15px; letter-spacing: 0.5px;">2026 ELITE AMATEUR SUMMER SERIES</span>
+      <span style="margin-left: 10px; background: #e53e3e; color: white; font-size: 10px; font-weight: 700; padding: 2px 6px; border-radius: 4px; letter-spacing: 0.5px;">TBD</span>
+    </div>
+    <div id="acc-icon" style="color: #ffffff; font-size: 18px; font-weight: 300; transition: transform 0.3s ease;">+</div>
+  </div>
+
+  <div id="summer-content" style="max-height: 0; overflow: hidden; transition: max-height 0.4s ease-out; background: #ffffff;">
+    <div style="padding-top: 15px;">
+      <table style="width: 100%; border-collapse: collapse; table-layout: fixed; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
+        <thead>
+          <tr style="background: #f8f9fa; border-bottom: 2px solid #e2e8f0;">
+            <th style="padding: 12px; text-align: left; font-size: 12px; color: #4a5568; font-weight: 700; width: 25%;">DATE</th>
+            <th style="padding: 12px; text-align: left; font-size: 12px; color: #4a5568; font-weight: 700; width: 50%;">TOURNAMENT / COURSE</th>
+            <th style="padding: 12px; text-align: center; font-size: 12px; color: #4a5568; font-weight: 700; width: 25%;">STATUS</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="border-bottom: 1px solid #edf2f7;">
+            <td style="padding: 15px 12px; vertical-align: top;">
+              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jun 24 - 27</div>
+            </td>
+            <td style="padding: 15px 12px;">
+              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">European Amateur Championship</div>
+              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Linna Golf - Hämeenlinna, FIN</div>
+            </td>
+            <td style="padding: 15px 12px; text-align: center;">
+              <span style="font-size: 12px; font-weight: 800; color: #e53e3e;">TBD</span>
+            </td>
+          </tr>
+
+          <tr style="border-bottom: 1px solid #edf2f7;">
+            <td style="padding: 15px 12px; vertical-align: top;">
+              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jul 20 - 21</div>
+            </td>
+            <td style="padding: 15px 12px;">
+              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">US Amateur Qualifying</div>
+              <div style="font-size: 12px; color: #718096; margin-top: 2px;">TBD - Regional Site Selection</div>
+            </td>
+            <td style="padding: 15px 12px; text-align: center;">
+              <span style="font-size: 11px; font-weight: 700; color: #4a5568;">SCHEDULED</span>
+            </td>
+          </tr>
+
+          <tr style="border-bottom: 1px solid #edf2f7;">
+            <td style="padding: 15px 12px; vertical-align: top;">
+              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jul 27 - Aug 1</div>
+            </td>
+            <td style="padding: 15px 12px;">
+              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">Western Amateur (EAGS)</div>
+              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Skokie Country Club - Glencoe, IL</div>
+            </td>
+            <td style="padding: 15px 12px; text-align: center;">
+              <span style="font-size: 12px; font-weight: 800; color: #e53e3e;">TBD</span>
+            </td>
+          </tr>
+
+          <tr style="background: rgba(0, 0, 0, 0.02);">
+            <td style="padding: 15px 12px; vertical-align: top;">
+              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Aug 10 - 16</div>
+            </td>
+            <td style="padding: 15px 12px;">
+              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">US Amateur Championship</div>
+              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Merion Golf Club - Ardmore, PA</div>
+            </td>
+            <td style="padding: 15px 12px; text-align: center;">
+              <span style="font-size: 11px; font-weight: 700; color: #a0aec0;">PENDING QUAL.</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      
+      <div style="margin-top: 10px; padding: 10px; border-left: 3px solid #000; background: #f1f5f9;">
+        <p style="margin: 0; font-size: 11px; color: #475569; line-height: 1.5;">
+          <b>Logistics Memo:</b> Participation in 2026 Summer Elite events is subject to university NIL coordination and logistical support framework. International scheduling for European Amateur is under final review.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+function toggleSummerSchedule() {
+  const content = document.getElementById('summer-content');
+  const icon = document.getElementById('acc-icon');
+  
+  if (content.style.maxHeight === '0px' || content.style.maxHeight === '') {
+    content.style.maxHeight = '1000px';
+    icon.style.transform = 'rotate(45deg)';
+  } else {
+    content.style.maxHeight = '0px';
+    icon.style.transform = 'rotate(0deg)';
+  }
+}
+</script>
+        
   <div style="text-align: center; padding: 20px; background: #f8f9fa; border-radius: 12px; border: 1px solid #e2e8f0; box-sizing: border-box; width: 100%;">
 <p style="margin: 0; font-size: 14px; color: #666; line-height: 1.6;">
   All performance metrics and rankings are based on official data from <b>Scoreboard.Clippd</b> and <b>WAGR</b>. 
