--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -974,111 +974,94 @@
 </div>
   
 
-<div style="width: 100%; max-width: 800px; margin: 20px auto; font-family: 'Inter', -apple-system, sans-serif; box-sizing: border-box;">
+<div style="width: 100%; max-width: 900px; margin: 30px auto; font-family: 'Inter', -apple-system, sans-serif; box-sizing: border-box;">
   
-  <div onclick="toggleSummerSchedule()" style="cursor: pointer; background: #000000; border-radius: 8px; padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; transition: all 0.3s ease; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+  <div style="background: #000000; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center;">
     <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 15px; letter-spacing: 0.5px;">2026 ELITE AMATEUR SUMMER SERIES</span>
-      <span style="margin-left: 10px; background: #e53e3e; color: white; font-size: 10px; font-weight: 700; padding: 2px 6px; border-radius: 4px; letter-spacing: 0.5px;">TBD</span>
+      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 0.8px;">2026 ELITE AMATEUR SUMMER SERIES</span>
+      <span style="margin-left: 15px; background: #e53e3e; color: white; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">TBD</span>
     </div>
-    <div id="acc-icon" style="color: #ffffff; font-size: 18px; font-weight: 300; transition: transform 0.3s ease;">+</div>
   </div>
 
-  <div id="summer-content" style="max-height: 0; overflow: hidden; transition: max-height 0.4s ease-out; background: #ffffff;">
-    <div style="padding-top: 15px;">
-      <table style="width: 100%; border-collapse: collapse; table-layout: fixed; border: 1px solid #e2e8f0; border-radius: 8px; overflow: hidden;">
-        <thead>
-          <tr style="background: #f8f9fa; border-bottom: 2px solid #e2e8f0;">
-            <th style="padding: 12px; text-align: left; font-size: 11px; color: #4a5568; font-weight: 700; width: 25%; letter-spacing: 0.5px;">DATE</th>
-            <th style="padding: 12px; text-align: left; font-size: 11px; color: #4a5568; font-weight: 700; width: 50%; letter-spacing: 0.5px;">TOURNAMENT / COURSE</th>
-            <th style="padding: 12px; text-align: center; font-size: 11px; color: #4a5568; font-weight: 700; width: 25%;">STATUS</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr style="border-bottom: 1px solid #edf2f7;">
-            <td style="padding: 15px 12px; vertical-align: top;">
-              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jun 10 - 13</div>
-            </td>
-            <td style="padding: 15px 12px;">
-              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">Sunnehanna Amateur (EAGS)</div>
-              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Sunnehanna CC - Johnstown, PA</div>
-            </td>
-            <td style="padding: 15px 12px; text-align: center;">
-              <span style="font-size: 12px; font-weight: 800; color: #e53e3e;">TBD</span>
-            </td>
-          </tr>
+  <div style="background: #ffffff; border: 1px solid #e2e8f0; border-top: none; border-radius: 0 0 8px 8px; overflow: hidden;">
+    <table style="width: 100%; border-collapse: collapse; table-layout: fixed;">
+      <thead>
+        <tr style="background: #f8f9fa; border-bottom: 2px solid #e2e8f0;">
+          <th style="padding: 15px 12px; text-align: left; font-size: 12px; color: #4a5568; font-weight: 700; width: 25%; letter-spacing: 0.5px;">DATE</th>
+          <th style="padding: 15px 12px; text-align: left; font-size: 12px; color: #4a5568; font-weight: 700; width: 50%; letter-spacing: 0.5px;">TOURNAMENT / COURSE</th>
+          <th style="padding: 15px 12px; text-align: center; font-size: 12px; color: #4a5568; font-weight: 700; width: 25%;">STATUS</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="border-bottom: 1px solid #edf2f7;">
+          <td style="padding: 20px 12px; vertical-align: top;">
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jun 10 - 13</div>
+          </td>
+          <td style="padding: 20px 12px;">
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">Sunnehanna Amateur (EAGS)</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Sunnehanna CC - Johnstown, PA</div>
+          </td>
+          <td style="padding: 20px 12px; text-align: center;">
+            <span style="font-size: 13px; font-weight: 800; color: #e53e3e;">TBD</span>
+          </td>
+        </tr>
 
-          <tr style="border-bottom: 1px solid #edf2f7;">
-            <td style="padding: 15px 12px; vertical-align: top;">
-              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jun 24 - 27</div>
-            </td>
-            <td style="padding: 15px 12px;">
-              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">European Amateur Championship</div>
-              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Linna Golf - Hämeenlinna, FIN</div>
-            </td>
-            <td style="padding: 15px 12px; text-align: center;">
-              <span style="font-size: 12px; font-weight: 800; color: #e53e3e;">TBD</span>
-            </td>
-          </tr>
+        <tr style="border-bottom: 1px solid #edf2f7;">
+          <td style="padding: 20px 12px; vertical-align: top;">
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jun 24 - 27</div>
+          </td>
+          <td style="padding: 20px 12px;">
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">European Amateur Championship</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Linna Golf - Hämeenlinna, FIN</div>
+          </td>
+          <td style="padding: 20px 12px; text-align: center;">
+            <span style="font-size: 13px; font-weight: 800; color: #e53e3e;">TBD</span>
+          </td>
+        </tr>
 
-          <tr style="border-bottom: 1px solid #edf2f7;">
-            <td style="padding: 15px 12px; vertical-align: top;">
-              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jul 20 - 21</div>
-            </td>
-            <td style="padding: 15px 12px;">
-              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">US Amateur Qualifying</div>
-              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Regional Site Selection</div>
-            </td>
-            <td style="padding: 15px 12px; text-align: center;">
-              <span style="font-size: 11px; font-weight: 700; color: #4a5568;">SCHEDULED</span>
-            </td>
-          </tr>
+        <tr style="border-bottom: 1px solid #edf2f7;">
+          <td style="padding: 20px 12px; vertical-align: top;">
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jul 20 - 21</div>
+          </td>
+          <td style="padding: 20px 12px;">
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">US Amateur Qualifying</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Regional Site Selection</div>
+          </td>
+          <td style="padding: 20px 12px; text-align: center;">
+            <span style="font-size: 12px; font-weight: 700; color: #4a5568;">SCHEDULED</span>
+          </td>
+        </tr>
 
-          <tr style="border-bottom: 1px solid #edf2f7;">
-            <td style="padding: 15px 12px; vertical-align: top;">
-              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Jul 27 - Aug 1</div>
-            </td>
-            <td style="padding: 15px 12px;">
-              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">Western Amateur (EAGS)</div>
-              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Skokie Country Club - Glencoe, IL</div>
-            </td>
-            <td style="padding: 15px 12px; text-align: center;">
-              <span style="font-size: 12px; font-weight: 800; color: #e53e3e;">TBD</span>
-            </td>
-          </tr>
+        <tr style="border-bottom: 1px solid #edf2f7;">
+          <td style="padding: 20px 12px; vertical-align: top;">
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Jul 27 - Aug 1</div>
+          </td>
+          <td style="padding: 20px 12px;">
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">Western Amateur (EAGS)</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Skokie Country Club - Glencoe, IL</div>
+          </td>
+          <td style="padding: 20px 12px; text-align: center;">
+            <span style="font-size: 13px; font-weight: 800; color: #e53e3e;">TBD</span>
+          </td>
+        </tr>
 
-          <tr style="background: rgba(0, 0, 0, 0.02);">
-            <td style="padding: 15px 12px; vertical-align: top;">
-              <div style="font-weight: 700; font-size: 13px; color: #1a202c;">Aug 10 - 16</div>
-            </td>
-            <td style="padding: 15px 12px;">
-              <div style="font-weight: 800; color: #2d3748; font-size: 15px;">US Amateur Championship</div>
-              <div style="font-size: 12px; color: #718096; margin-top: 2px;">Merion Golf Club - Ardmore, PA</div>
-            </td>
-            <td style="padding: 15px 12px; text-align: center;">
-              <span style="font-size: 11px; font-weight: 700; color: #a0aec0;">PENDING QUAL.</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+        <tr style="background: rgba(0, 0, 0, 0.02);">
+          <td style="padding: 20px 12px; vertical-align: top;">
+            <div style="font-weight: 700; font-size: 14px; color: #1a202c;">Aug 10 - 16</div>
+          </td>
+          <td style="padding: 20px 12px;">
+            <div style="font-weight: 800; color: #2d3748; font-size: 16px;">US Amateur Championship</div>
+            <div style="font-size: 12px; color: #718096; margin-top: 4px;">Merion Golf Club - Ardmore, PA</div>
+          </td>
+          <td style="padding: 20px 12px; text-align: center;">
+            <span style="font-size: 12px; font-weight: 700; color: #a0aec0;">PENDING QUAL.</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
-
-<script>
-function toggleSummerSchedule() {
-  const content = document.getElementById('summer-content');
-  const icon = document.getElementById('acc-icon');
   
-  if (content.style.maxHeight === '0px' || content.style.maxHeight === '') {
-    content.style.maxHeight = '1000px';
-    icon.style.transform = 'rotate(45deg)';
-  } else {
-    content.style.maxHeight = '0px';
-    icon.style.transform = 'rotate(0deg)';
-  }
-}
-</script>
   
 
 
