--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1542,6 +1542,7 @@
     </div>
   </div>
 
+
   <div class="advanced-analysis-section" style="width: 100%; margin: 0 auto 60px; padding: 0; box-sizing: border-box;">
     <div style="margin-bottom: 25px; padding: 0 15px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
@@ -1560,9 +1561,9 @@
         </div>
         <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
           <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency & Reliability</span>
-          <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% Counting Score</span>
-          <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">All competitive rounds contributed to the team total</div>
-          <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 15/15 Rounds Recorded</div>
+          <span style="font-size: 24px; font-weight: 900; color: #0c2340;">93.3% Counting Score</span>
+          <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Significant majority of rounds contributed to team total</div>
+          <div style="display: inline-block; font-size: 13px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: 14/15 Rounds Recorded</div>
         </div>
       </div>
       <div style="margin-top: 40px; box-sizing: border-box;">
@@ -1582,7 +1583,7 @@
             Scoring Availability & Team Contribution
           </h4>
           <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all; box-sizing: border-box;">
-            Across all recorded rounds during the freshman season, <b>scoring output was logged as a counting score</b> for the team total under varying course conditions.
+            Across the majority of recorded rounds during the freshman season, <b>scoring output was logged as a counting score</b> for the team total under varying course conditions.
           </p>
         </div>
         <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9; box-sizing: border-box;">
@@ -1600,7 +1601,6 @@
       </div>
     </div>
   </div>
-</div>
 
 
 <div class="witb-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
