--- a/test-2.html
+++ b/test-2.html
@@ -1539,6 +1539,64 @@
 
 
 
+
+  <div class="advanced-analysis-section" style="width: 100%; max-width: 900px; margin: 0 auto 60px; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="margin-bottom: 25px; padding: 0 15px; box-sizing: border-box;">
+    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+      ADVANCED COMPETITIVE ANALYSIS & STRATEGY
+      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season — 15-Round Cumulative)</span>
+    </h3>
+  </div>
+  <div style="border: 1px solid #e2e8f0; border-radius: 20px; padding: 35px; background: #ffffff; box-shadow: 0 10px 40px rgba(0,0,0,0.05); box-sizing: border-box;">
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px; box-sizing: border-box;">
+      
+      <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Head-to-Head Performance</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Win Rate: 72.4%</div>
+        <div style="display: inline-block; font-size: 12px; color: #806600; margin-top: 10px; font-weight: 800; background: rgba(128, 102, 0, 0.08); padding: 4px 15px; border-radius: 25px;">Status: Cumulative Data Profile</div>
+      </div>
+
+      <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Scoring Consistency & Reliability</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">93.3% Counting Score</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">14/15 Rounds Contributed</div>
+        <div style="display: inline-block; font-size: 12px; color: #1a73e8; margin-top: 10px; font-weight: 800; background: rgba(26, 115, 232, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: Cumulative Reliability</div>
+      </div>
+
+      <div style="padding: 25px; background: #ffffff; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Team Contribution Ratio</span>
+        <span style="font-size: 24px; font-weight: 900; color: #0c2340;">100% (Recent Event)</span>
+        <div style="display: block; font-size: 13px; color: #64748b; margin-top: 5px; font-weight: 700;">Counting Score Rate: 1.000</div>
+        <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 10px; font-weight: 800; background: rgba(16, 185, 129, 0.08); padding: 4px 15px; border-radius: 25px;">Metric: Travel Squad Lineup</div>
+      </div>
+
+      <div style="padding: 25px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Performance Tracking</span>
+        <span style="font-size: 18px; font-weight: 900; color: #0c2340; display: block; margin-bottom: 5px;">Round-Level Logging</span>
+        <div style="font-size: 12px; color: #4a5568; line-height: 1.5; font-weight: 600;">Field-relative position, variance, and cumulative freshman records archived.</div>
+        <div style="display: inline-block; font-size: 11px; color: #0c2340; margin-top: 12px; font-weight: 800; background: rgba(12, 35, 64, 0.05); padding: 4px 15px; border-radius: 25px;">Data Review: Clippd/Scoreboard</div>
+      </div>
+
+      <div style="padding: 25px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Course & Field Context</span>
+        <span style="font-size: 18px; font-weight: 900; color: #0c2340; display: block; margin-bottom: 5px;">Even Par vs Field Baseline</span>
+        <div style="font-size: 12px; color: #4a5568; line-height: 1.5; font-weight: 600;">Venue: Iberostar (Par 72)<br>Field Avg: 77.10 (R1-R3 tracking)</div>
+        <div style="display: inline-block; font-size: 11px; color: #2b6cb0; margin-top: 12px; font-weight: 800; background: rgba(43, 108, 176, 0.05); padding: 4px 15px; border-radius: 25px;">Metric: Field-Relative Scoring</div>
+      </div>
+
+      <div style="padding: 25px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7; box-sizing: border-box;">
+        <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 10px;">Strategic Application</span>
+        <span style="font-size: 18px; font-weight: 900; color: #0c2340; display: block; margin-bottom: 5px;">SG: +0.35 | T3 Finish</span>
+        <div style="font-size: 12px; color: #4a5568; line-height: 1.5; font-weight: 600;">Technical directives by B. Gathright. Event Rank Impact: +136.</div>
+        <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 12px; font-weight: 800; background: rgba(128, 102, 0, 0.05); padding: 4px 15px; border-radius: 25px;">Metric: Technical Alignment</div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
   
 
 
