--- a/test-1.html
+++ b/test-1.html
@@ -1343,21 +1343,6 @@
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box; width: 100%;">
-    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0;">
-      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-        PERFORMANCE & STRATEGY ANALYSIS
-      </h3>
-      <p style="margin: 8px 0 0 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
-        (2026 Freshman Spring Season)
-      </p>
-    </div>
-    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
-      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb 4, 2026</span>
-    </div>
-  </div>
-
   <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
     <div style="margin-bottom: 25px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
@@ -1389,7 +1374,7 @@
     </div>
   </div>
 
-  <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 60px; box-sizing: border-box;">
+  <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
     <div style="margin-bottom: 25px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
@@ -1431,6 +1416,28 @@
       </div>
     </div>
 
+    <div style="margin-top: 12px; font-size: 11px; color: #64748b; font-weight: 700; line-height: 1.4; width: 100%;">
+      Team contribution is defined as the share of Clippd (w) Points among participating team members.<br>
+      Note: Team Total reflects participating team-member entries (Individual-only entries excluded).
+    </div>
+  </div>
+
+  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box; width: 100%;">
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0;">
+      <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+        PERFORMANCE & STRATEGY ANALYSIS
+      </h3>
+      <p style="margin: 8px 0 0 0; color: #806600; font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
+        (2026 Freshman Spring Season)
+      </p>
+    </div>
+    <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box;">
+      <span style="font-size: 10px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb 4, 2026</span>
+    </div>
+  </div>
+
+  <div style="width: 100%; box-sizing: border-box;">
     <div style="margin-top: 25px; background: #ffffff; padding: 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
