--- a/test-1.html
+++ b/test-1.html
@@ -1416,7 +1416,7 @@
       </div>
     </div>
 
-    <div style="margin-top: 12px; font-size: 11px; color: #64748b; font-weight: 700; line-height: 1.4; width: 100%;">
+    <div style="margin-top: 12px; font-size: 11px; color: #64748b; font-weight: 700; line-height: 1.4; width: 100%; text-align: center;">
       Team contribution is defined as the share of Clippd (w) Points among participating team members.<br>
       Note: Team Total reflects participating team-member entries (Individual-only entries excluded).
     </div>
