--- a/test-1.html
+++ b/test-1.html
@@ -1342,7 +1342,7 @@
 
 
 <div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  
+
   <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
     <div style="margin-bottom: 25px; box-sizing: border-box;">
       <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
@@ -1416,14 +1416,14 @@
       </div>
     </div>
 
-    <div style="margin-top: 12px; font-size: 11px; color: #64748b; font-weight: 700; line-height: 1.4; width: 100%; text-align: center;">
+    <div style="margin-top: 12px; font-size: 11px; color: #64748b; font-weight: 700; line-height: 1.4; width: 100%; text-align: center; box-sizing: border-box;">
       Team contribution is defined as the share of Clippd (w) Points among participating team members.<br>
       Note: Team Total reflects participating team-member entries (Individual-only entries excluded).
     </div>
   </div>
 
-  <div style="margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box; width: 100%;">
-    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0;">
+  <div style="width: 100%; margin-bottom: 40px; border: 1px solid #e2e8f0; border-radius: 20px; padding: 25px; background: #ffffff; box-shadow: 0 15px 35px rgba(0,0,0,0.06); overflow: hidden; box-sizing: border-box;">
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 20px; margin-bottom: 0; box-sizing: border-box;">
       <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 10px;">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
         PERFORMANCE & STRATEGY ANALYSIS
@@ -1459,7 +1459,7 @@
     </div>
 
     <div style="text-align: right; border-top: 1px solid #edf2f7; padding-top: 15px; margin-top: 18px; box-sizing: border-box; width: 100%;">
-      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 4, 2026</span>
+      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
     </div>
   </div>
 </div>
